--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -18,6 +18,8 @@
 			<link rel="stylesheet" href="{$basePath}/css/foundation-datepicker.css" />
 			<link rel="stylesheet" href="{$basePath}/css/foundation-datetimepicker.css" />
 			<link rel="stylesheet" href="{$basePath}/css/switchery.min.css" />
+			<link rel="stylesheet" href="{$basePath}/fancybox/jquery.fancybox.css" />
+			<link rel="stylesheet" href="{$basePath}/rateit/rateit.css" />
 			<link rel="stylesheet" href="{$basePath}/css/app.css" />
 		<!-- endbuild -->
 
@@ -32,6 +34,8 @@
 			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
 			<script src="{$basePath}/js/switchery.min.js"></script>
 			<script src="{$basePath}/js/autosize.min.js"></script>
+			<script src="{$basePath}/fancybox/jquery.fancybox.pack.js"></script>
+			<script src="{$basePath}/rateit/jquery.rateit.min.js"></script>
 
 			<script src="{$basePath}/js/angular.min.js"></script>
 			<script src="{$basePath}/js/scrollGlue.js"></script>
