--- a/app/presenters/templates/Lesson/default.latte
+++ b/app/presenters/templates/Lesson/default.latte
@@ -9,7 +9,7 @@
 				{foreach $activities['questions'] as $question}
 					<li>
 						{snippet question-$question->id}
-						<a {if $user->isInRole('student')}class="myAjax"{else}class="question"{/if} href="{link loadQuestion! $question->getId()}" data-reveal-id="questionModal">{$question->getQuestionText()}</a>
+						<a class="myAjax" href="{link loadQuestion! $question->getId()}" data-reveal-id="questionModal">{$question->getQuestionText()}</a>
 						{if $user->isInRole('teacher')}
 							<a href="{link toggleQuestion! $question->getId()}" class="ajax right">
 							{if $question->isVisible()}
@@ -108,79 +108,7 @@
 		{else}
 			<p class="lead">{$questionActivity->getQuestionText()}</p>
 			{if $user->isInRole('teacher')}
-				<ul class="tabs" data-tab>
-					<li class="tab-title active"><a href="#questionSummary">Souhrn odpovědí</i></a></li>
-					<li class="tab-title"><a href="#questionEdit">Editace otázky</a></li>
-				</ul>
-
-				<div class="tabs-content">
-					<a href="{link loadQuestion! $questionActivity->getId()}" class="button right tiny secondary question">
-						<span>
-							<i style="font-size: 20px" class="fi-refresh"></i>
-						</span>
-					</a>
-					<hr/>
-					<div class="content active" id="questionSummary">
-
-						<div class="clearfix"></div>
-						<div id="questionChart"></div>
-						<hr/>
-						<div class="small-12">
-							{if $questionActivity->getAnswers()->count()}
-								<table class="small-12">
-									<thead>
-									<tr>
-										<th>Jméno a příjmení</th>
-										<th>{if $questionActivity->getQuestionType() == 'multiplechoice'}Odpovědi{else}Odpověď{/if}</th>
-										{if $questionActivity->isReasonRequire()}
-											<th>Zdůvodnění</th>
-										{/if}
-										<th>Úspěšnost v %</th>
-									</tr>
-									</thead>
-									<tbody>
-									{foreach $questionActivity->getAnswers() as $answer}
-										<tr>
-											<td>{$answer->getStudent()->getName()} {$answer->getStudent()->getSurname()}</td>
-											{if $questionActivity->getQuestionType() == 'text'}
-												<td>{$answer->getAnswerText()}</td>
-											{else}
-												<td>
-													{foreach $answer->getOptions() as $option}
-														{$option->getOptionText()} {sep},{/sep}
-													{/foreach}
-												</td>
-											{/if}
-											{if $questionActivity->isReasonRequire()}
-												<td>{$answer->getReason()}</td>
-											{/if}
-											<td contenteditable="true" class="points" data-answer-id="{$answer->getId()}">
-												{if $answer->getPoints() === null}
-													<span class="label alert">čeká na ohodnocení</span>
-												{else}
-													{$answer->getPoints()}
-												{/if}
-											</td>
-										</tr>
-									{/foreach}
-									</tbody>
-								</table>
-							{else}
-								<div class="panel">Zatím žádné odpovědi</div>
-							{/if}
-						</div>
-					</div>
-					<div class="content" id="questionEdit">
-						{if $questionActivity->getAnswers()->count()}
-							<div class="panel">Na otázku již bylo odpovězeno, nelze ji proto editovat</div>
-						{else}
-							{control questionForm}
-						{/if}
-					</div>
-				</div>
-				<ul class="tabs vertical" data-tab>
-
-				</ul>
+				{control questionSummary}
 			{else}
 				{control answerForm}
 			{/if}
@@ -336,65 +264,7 @@
 				})
 
 
-				var prevDataPoints = '';
-				$(document).on('focus', '.points', function() {
-					if ($(this).html().indexOf('label') > -1) {
-						prevDataPoints = $(this).html();
-						$(this).html('');
-					} else {
-						prevDataPoints = parseInt($(this).text().trim());
-					}
-				});
 
-				$(document).on('blur', '.points', function() {
-					var data = parseInt($(this).text().trim());
-					if (data != prevDataPoints) {
-						if (data < 0 || data > 100) {
-							alert('Úspěšnost musí být mezi 0 - 100 %');
-							$(this).html(prevDataPoints);
-							return false;
-						} else if (isNaN(data)) {
-
-							alert('Úspěšnost musí být číslo');
-							$(this).html(prevDataPoints);
-							return false;
-						}
-						var id = $(this).data('answer-id');
-						$.post({link editAnswer!}, { answerId: id, points: data}).error(function() {
-							alert('Nepodařilo se uložit úspěšnost');
-						}).success(function(e) {
-							if (e['chartData'] !== 'undefined') {
-								console.log(e['chartData']);
-								drawChart("questionChart", JSON.parse(e['chartData']));
-							}
-							$(document).foundation();
-						});
-						$(this).text(data);
-
-					} else {
-						$(this).text(prevDataPoints);
-					}
-				});
-
-
-				$(document).on('click', ".question", function() {
-					var url = $(this).attr("href");
-					$.nette.ajax({
-						url: url
-					}).success(function(e) {
-						if (e['chartData'] !== 'undefined') {
-							drawChart("questionChart", JSON.parse(e['chartData']));
-						}
-						$(document).foundation();
-					});
-
-					if ($(this).hasClass('button')) {
-						$(this).addClass('disabled');
-						$(this).text("Načítám...");
-					}
-
-					return false;
-				});
 			})
 		</script>
 	{/block}
