--- a/app/controls/activity-summary/questionSummary.latte
+++ b/app/controls/activity-summary/questionSummary.latte
@@ -1,83 +1,86 @@
 {snippet}
-	<ul class="tabs" data-tab>
-		<li class="tab-title active"><a href="#questionSummary">Souhrn odpovědí</i></a></li>
-		<li class="tab-title"><a href="#questionEdit">Editace otázky</a></li>
-	</ul>
+	<div id="{$control->getUniqueId()}">
+		<ul class="tabs" data-tab>
+			<li class="tab-title active"><a href="#questionSummary">Souhrn odpovědí</i></a></li>
+			<li class="tab-title"><a href="#questionEdit">Editace otázky</a></li>
+		</ul>
 
-	<div class="tabs-content">
-		<a href="{link refresh! }" class="button right tiny secondary refresh">
-							<span>
-								<i style="font-size: 20px" class="fi-refresh"></i>
-							</span>
-		</a>
-		<hr/>
-		<div class="content active" id="questionSummary">
-
-			<div class="clearfix"></div>
-			<div id="questionChart"></div>
+		<div class="tabs-content">
+			<a href="{link refresh! }" class="button right tiny secondary refresh">
+								<span>
+									<i style="font-size: 20px" class="fi-refresh"></i>
+								</span>
+			</a>
 			<hr/>
-			<div class="small-12">
-				{if $question->getAnswers()->count()}
-					<table class="small-12">
-						<thead>
-						<tr>
-							<th>Jméno a příjmení</th>
-							<th>{if $question->getQuestionType() == 'multiplechoice'}Odpovědi{else}Odpověď{/if}</th>
-							{if $question->isReasonRequire()}
-								<th>Zdůvodnění</th>
-							{/if}
-							<th>Úspěšnost v %</th>
-						</tr>
-						</thead>
-						<tbody>
-						{foreach $question->getAnswers() as $answer}
+			<div class="content active" id="questionSummary">
+
+				<div class="clearfix"></div>
+				<div id="questionChart"></div>
+				<hr/>
+				<div class="small-12">
+					{if $question->getAnswers()->count()}
+						<table class="small-12">
+							<thead>
 							<tr>
-								<td>{$answer->getStudent()->getName()} {$answer->getStudent()->getSurname()}</td>
-								{if $question->getQuestionType() == 'text'}
-									<td>{$answer->getAnswerText()}</td>
-								{else}
-									<td>
-										{foreach $answer->getOptions() as $option}
-											{$option->getOptionText()} {sep},{/sep}
-										{/foreach}
-									</td>
-								{/if}
+								<th>Jméno a příjmení</th>
+								<th>{if $question->getQuestionType() == 'multiplechoice'}Odpovědi{else}Odpověď{/if}</th>
 								{if $question->isReasonRequire()}
-									<td>{$answer->getReason()}</td>
+									<th>Zdůvodnění</th>
 								{/if}
-								<td contenteditable="true" class="points" data-answer-id="{$answer->getId()}">
-									{if $answer->getPoints() === null}
-										<span class="label alert">čeká na ohodnocení</span>
-									{else}
-										{$answer->getPoints()}
-									{/if}
-								</td>
+								<th>Úspěšnost v %</th>
 							</tr>
-						{/foreach}
-						</tbody>
-					</table>
+							</thead>
+							<tbody>
+							{foreach $question->getAnswers() as $answer}
+								<tr>
+									<td>{$answer->getStudent()->getName()} {$answer->getStudent()->getSurname()}</td>
+									{if $question->getQuestionType() == 'text'}
+										<td>{$answer->getAnswerText()}</td>
+									{else}
+										<td>
+											{foreach $answer->getOptions() as $option}
+												{$option->getOptionText()} {sep},{/sep}
+											{/foreach}
+										</td>
+									{/if}
+									{if $question->isReasonRequire()}
+										<td>{$answer->getReason()}</td>
+									{/if}
+									<td contenteditable="true" class="points" data-answer-id="{$answer->getId()}">
+										{if $answer->getPoints() === null}
+											<span class="label alert">čeká na ohodnocení</span>
+										{else}
+											{$answer->getPoints()}
+										{/if}
+									</td>
+								</tr>
+							{/foreach}
+							</tbody>
+						</table>
+					{else}
+						<div class="panel">Zatím žádné odpovědi</div>
+					{/if}
+				</div>
+			</div>
+			<div class="content" id="questionEdit">
+				{if $question->getAnswers()->count()}
+					<div class="panel">Na otázku již bylo odpovězeno, nelze ji proto editovat</div>
 				{else}
-					<div class="panel">Zatím žádné odpovědi</div>
+					{control questionForm}
 				{/if}
 			</div>
-		</div>
-		<div class="content" id="questionEdit">
-			{if $question->getAnswers()->count()}
-				<div class="panel">Na otázku již bylo odpovězeno, nelze ji proto editovat</div>
-			{else}
-				{control questionForm}
-			{/if}
 		</div>
 	</div>
 
 <script>
+	var id = {$control->getUniqueId()};
 
 	$(document).ready(function() {
 		drawChart("questionChart", JSON.parse({$chartData}));
 	})
 
 	var prevDataPoints = '';
-	$(document).on('focus', '.points', function() {
+	$(document).on('focus', '#' + id +' .points', function() {
 		if ($(this).html().indexOf('label') > -1) {
 			prevDataPoints = $(this).html();
 			$(this).html('');
@@ -86,7 +89,7 @@
 		}
 	});
 
-	$(document).on('blur', '.points', function() {
+	$(document).on('blur', '#' + id +' .points', function() {
 		var data = parseInt($(this).text().trim());
 		if (data != prevDataPoints) {
 			if (data < 0 || data > 100) {
@@ -116,7 +119,7 @@
 		}
 	});
 
-	$(document).on('click', '.refresh', function() {
+	$(document).on('click', '#' + id + ' .refresh', function() {
 		var url = $(this).attr("href");
 		$.nette.ajax({
 			url: url
