--- a/app/forms/activity/taskForm.latte
+++ b/app/forms/activity/taskForm.latte
@@ -22,7 +22,7 @@
 		{input limitType}
 	</p>
 
-	<div id="taskEnd">
+	<div id="{$control->getUniqueId()}-taskEnd">
 		<p>
 			{label end /}
 			{input end}
