--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -20,6 +20,7 @@
 			<link rel="stylesheet" href="{$basePath}/css/switchery.min.css" />
 			<link rel="stylesheet" href="{$basePath}/fancybox/jquery.fancybox.css" />
 			<link rel="stylesheet" href="{$basePath}/rateit/rateit.css" />
+			<link rel="stylesheet" href="{$basePath}/css/tooltipster.css" />
 			<link rel="stylesheet" href="{$basePath}/css/app.css" />
 		<!-- endbuild -->
 
@@ -34,6 +35,7 @@
 			<script src="{$basePath}/js/jquery.nicescroll.min.js"></script>
 			<script src="{$basePath}/js/switchery.min.js"></script>
 			<script src="{$basePath}/js/autosize.min.js"></script>
+			<script src="{$basePath}/js/jquery.tooltipster.min.js"></script>
 			<script src="{$basePath}/fancybox/jquery.fancybox.pack.js"></script>
 			<script src="{$basePath}/rateit/jquery.rateit.min.js"></script>
 
