--- a/app/forms/activity/taskForm.latte
+++ b/app/forms/activity/taskForm.latte
@@ -17,7 +17,7 @@
 
 	<p>
 		{label limitType class => "left" /}&nbsp;
-		<i class="fi-info cursor-pointer" id="tooltip-limit"></i>
+		<i class="fi-info cursor-pointer tooltip-limit"></i>
 		{input limitType}
 	</p>
 
