--- a/app/forms/activity/questionForm.latte
+++ b/app/forms/activity/questionForm.latte
@@ -1,45 +1,54 @@
+{if !$edit}
+	<p><strong>Kopie z otázky</strong></p>
 
-		<div class="row collapse prefix-radius">
-				<div class="small-1 columns left">
-					<span class="prefix"><i class="fi-magnifying-glass"></i></span>
-				</div>
-				<div class="small-11 columns left">
-					<input type="text" class="liveSearch" data-url="{link searchQuestions!}" data-spinner="questionSpinner" placeholder="Hledejte staré otázky..."/>
-				</div>
-		</div>
+	<div class="row collapse prefix-radius">
+					<div class="small-1 columns left">
+						<span class="prefix"><i class="fi-magnifying-glass"></i></span>
+					</div>
+					<div class="small-11 columns left">
+						<input type="text" class="liveSearch" data-url="{link searchQuestions!}" data-spinner="questionSpinner" placeholder="Hledejte staré otázky..."/>
+					</div>
+			</div>
 
-{snippet questions}
-	<img src="{$basePath}/images/spinner-bubble.svg" alt="" id="questionSpinner" class="hide"/>
+	{snippet questions}
+		<img src="{$basePath}/images/spinner-bubble.svg" alt="" id="questionSpinner" class="hide"/>
 
-	{if isset($questions)}
-		{if !count($questions)}
-			<div class="panel">Nenalezeny žádné otázky</div>
-		{else}
-			<table class="small-12">
-				<thead>
-				<tr>
-					<th>Text otázky</th>
-					<th>Typ otázky</th>
-					<th></th>
-				</tr>
-				</thead>
-				<tbody>
-				{foreach $questions as $question}
+		{if isset($questions)}
+			{if !count($questions)}
+				<div class="panel">Nenalezeny žádné otázky</div>
+			{else}
+				<table class="small-12">
+					<thead>
 					<tr>
-						<td>{$question->getQuestionText()}</td>
-						<td>{$question->getQuestionTypeText()}</td>
-						<td class="text-center">
-							<a class="button tiny secondary ajax" href="{link copy! $question->getId()}" title="Zkopírovat otázku">
-								<i style="font-size:20px" class="fi-page-copy"></i>
-							</a>
-						</td>
+						<th>Text otázky</th>
+						<th>Typ otázky</th>
+						<th></th>
 					</tr>
-				{/foreach}
-				</tbody>
-			</table>
+					</thead>
+					<tbody>
+					{foreach $questions as $question}
+						<tr>
+							<td>{$question->getQuestionText()}</td>
+							<td>{$question->getQuestionTypeText()}</td>
+							<td class="text-center">
+								<a class="button tiny secondary ajax" href="{link copy! $question->getId()}" title="Zkopírovat otázku">
+									<i style="font-size:20px" class="fi-page-copy"></i>
+								</a>
+							</td>
+						</tr>
+					{/foreach}
+					</tbody>
+				</table>
+			{/if}
 		{/if}
-	{/if}
-{/snippet}
+	{/snippet}
+
+	<hr/>
+
+	<p><strong>Nová otázka</strong></p>
+{else}
+	<p><strong>Editace otázky</strong></p>
+{/if}
 
 {snippet form}
 	{form form id => 'questionForm'}
@@ -52,7 +61,6 @@
 		</div>
 
 		<div class="small-12 column">
-			<p><strong>Otázka</strong></p>
 			{label questionText/}
 			{input questionText}
 		</div>
