text for range slider fixes

--- a/app/controls/rating/rating.latte
+++ b/app/controls/rating/rating.latte
@@ -1,7 +1,7 @@
 <div id="{$control->getUniqueId()}">
 	{if $withImage}
 		<div class="small-12 text-center">
-			<img src="{$basePath}/{$task->getFilename()}" alt=""/>
+			<img src="{$basePath}/{$task->getFilename('web')}" alt=""/>
 		</div>
 		<hr/>
 	{/if}
